@@ -34,7 +34,7 @@ xkbevd_SOURCES =	\
         xkbevd.c \
         xkbevd.h
 
-appman_SOURCES = \
+appman_PRE = \
         xkbevd.man
 
 BUILT_SOURCES = cfgparse.c
@@ -45,9 +45,9 @@ EXTRA_DIST = example.cf
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
